[package]
name = "config_updater"
version = "0.1.0"
edition = "2021"
description = "Automatically detect file changes and update accordingly"
repository = "https://github.com/0xlunar/config_updater"

#[features]
#default = ["std"]
#tokio = ["dep:tokio"]
#std = []

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.35.1", features = ["full"]}
log = "0.4.22"
